<resources>
    <string name="app_name">Simple Encryption</string>
    <string name="message_label">Message</string>
    <string name="key_label">Key</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="keyword_help_text">Set of characters to encrypt/decrypt the message. Spaces will be ignored</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="important_information">Important information</string>
    <string name="ok" translatable="false">OK</string>
    <string name="app_encryption_info">The method or methods used for encryption in this app are not safe and should not be used in production environments nor to protect sensible data. This is only meant for fun and games.</string>
    <string name="method">Method</string>
    <string name="caesar">Caesar</string>
    <string name="simple_substitution">Simple substitution</string>
    <string name="one_time_pad" translatable="false">One-time-pad</string>
    <string name="error_message_empty">Can\'t cipher the message because it\'s empty</string>
    <string name="error_keyword_empty">Can\'t cipher the message because there is no keyword</string>
    <string name="error_keyword_not_natural_number">Keyword needs to be a natural number</string>
    <string name="error_keyword_and_message_length_differ">Keyword and message must have the same length</string>
    <string name="error_unknown_at_cipher">An unknown error occurred while processing the message</string>
    <!-- Encryption methods as a string array -->
    <string-array name="encryptionMethods">
        <item>@string/caesar</item>
        <item>@string/simple_substitution</item>
        <item>@string/one_time_pad</item>
    </string-array>
</resources>